# pyclaude

./: .gitignore  README.md  pyproject.toml
docs/claude/: 00-index.md  01-architecture-overview.md  02-core-modules.md  03-bridge-module.md  04-cli-commands.md  05-hooks-services.md  14-input-system.md  16-root-level-files.md
docs/claudex/: 00-index.md  17-coding-standards.md
pyclaude/: __init__.py  cli_main.py  context.py  cost_tracker.py  main.py  query_engine.py  query_impl.py
pyclaude/bridge/: __init__.py  bridge_debug.py  bridge_enabled.py  bridge_permission_callbacks.py  bridge_pointer.py  bridge_status_util.py  bridge_ui.py  capacity_wake.py  code_session_api.py  create_session.py  debug_utils.py  env_less_bridge_config.py  flush_gate.py  inbound_attachments.py  inbound_messages.py  init_repl_bridge.py  jwt_utils.py  poll_config.py  poll_config_defaults.py  remote_bridge_core.py  repl_bridge_handle.py  repl_bridge_transport.py  session_id_compat.py  trusted_device.py  types.py  work_secret.py
pyclaude/commands/: __init__.py
pyclaude/components/: __init__.py  app.py  spinner.py
pyclaude/constants/: betas.py  files.py  keys.py  oauth.py  product.py  prompts.py  system.py  tool_limits.py  (+3 more)
tests/: __init__.py  conftest.py  test_bash_tool.py  test_bundled_skills.py  test_glob_tool.py  test_ink.py  test_load_skills_dir.py  test_load_user_bindings.py  test_mcp.py  test_memory_scan.py  test_plugin_identifier.py  test_plugin_operations.py  test_plugin_schemas.py  test_plugins_init.py  test_read_tool.py  test_skills.py  test_task.py  test_tool.py  test_utils.py
(+343 files in other folders)
